--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ Flask-CORS==4.0.0
 Flask-JWT-Extended==4.6.0
 Werkzeug==3.0.1
 requests==2.31.0
-sqlite3==3.42.0
-python-dotenv==1.0.0
-python-jwt==3.3.0
+SQLAlchemy==2.0.35
+psycopg
